# snapfix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  blog_stripe_pytest.md  pyproject.toml  snapfix.yaml.example
.github/workflows/: ci.yml  release.yml
src/snapfix/: __init__.py  _types.py  audit.py  capture.py  cli.py  codegen.py  config.py  diff.py  plugin.py  reconstruct.py  scrubber.py  serializer.py  store.py  verify.py
tests/: conftest.py  test_audit.py  test_capture.py  test_cli.py  test_codegen.py  test_diff.py  test_first_run.py  test_integration.py  test_plugin.py  test_scrubber.py  test_serializer.py  test_snapfix.py  test_store.py  test_verify.py
