[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "snapfix"
version         = "0.1.0"
description     = "Capture real Python objects, scrub sensitive fields, emit pytest fixtures."
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
keywords        = ["testing", "pytest", "fixtures", "pii", "scrubbing", "capture"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["typer>=0.12"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "pydantic>=2.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.scripts]
snapfix = "snapfix.cli:app"

[project.urls]
Homepage      = "https://github.com/yourname/snapfix"
Documentation = "https://github.com/yourname/snapfix#readme"
Issues        = "https://github.com/yourname/snapfix/issues"
Changelog     = "https://github.com/yourname/snapfix/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/snapfix"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.10"
strict                 = true
ignore_missing_imports = true
