[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "snapfix"
version         = "0.3.2"
description     = "Capture real Python objects, scrub sensitive fields, emit pytest fixtures."
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.10"
keywords        = ["testing", "pytest", "fixtures", "pii", "scrubbing", "capture"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Pytest",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.0",
    "pydantic>=2.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.scripts]
snapfix = "snapfix.cli:app"

# ── pytest plugin entry point ─────────────────────────────────────────────────
# This registers snapfix.plugin with every pytest run automatically.
# Users get --snapfix-capture, --no-snapfix-capture, --snapfix-dir flags
# without any conftest.py changes.
[project.entry-points."pytest11"]
snapfix = "snapfix.plugin"

[project.urls]
Homepage      = "https://github.com/hacky1997/snapfix"
Documentation = "https://github.com/hacky1997/snapfix#readme"
Issues        = "https://github.com/hacky1997/snapfix/issues"
Changelog     = "https://github.com/hacky1997/snapfix/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/snapfix"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "UP006", "UP007"]

[tool.mypy]
python_version         = "3.10"
strict                 = true
ignore_missing_imports = true
